<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="0dp">

        <!--1.Zeile Radiogroup (DONE)-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/morgensOderAbends"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:checkedButton="@+id/zaehlMorgens"
                android:orientation="horizontal"
                android:text="@string/app_title"
                android:textAlignment="center"
                android:textSize="40dp">

                <RadioButton
                    android:id="@+id/zaehlMorgens"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:text="@string/morgens"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/zaehlAbends"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:text="@string/abends"
                    android:textSize="20dp" />
            </RadioGroup>
        </LinearLayout>
        <!--2.Zeile Seekbar (DONE)-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/verspaetung"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:max="60"
                android:progress="10" />
        </LinearLayout>
        <!--3.Zeile Register Button (DONE) -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="buttonTrageVerspaetungEin"
                android:text="@string/register_latness" />
        </LinearLayout>
        <!--4.Zeile Minutenzaehler (DONE)-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:text="Jetztige Verspätung:" />

            <TextView
                android:id="@+id/verspaetungMorgens"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:text="10"
                android:textSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:text="Min morgens"
                android:textSize="30px" />

            <TextView
                android:id="@+id/verspaetungAbends"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:text="0"
                android:textSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Min abends"
                android:textSize="30px" />
        </LinearLayout>
        <!--5.Zeile Summe MinurtenZeahler (DONE)-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:text="Summe Tage:" />

            <TextView
                android:id="@+id/gesamtMorgens"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:text="0"
                android:textSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:text="Tage morgens"
                android:textSize="30px" />

            <TextView
                android:id="@+id/gesamtAbends"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:text="0"
                android:textSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Tage abends"
                android:textSize="30px" />
        </LinearLayout>
        <!--6.Zeile Durchschnitt minutenzaehler (DONE)-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:text="Im Durchschnitt:" />

            <TextView
                android:id="@+id/durchschnittMorgens"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:text="0"
                android:textSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:text="Min morgens"
                android:textSize="30px" />

            <TextView
                android:id="@+id/durchschnittAbends"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:text="0"
                android:textSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Min abends"
                android:textSize="30px" />
        </LinearLayout>
        <!--7.Zeile Kommentartext (DONE)-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:text="Kommentar: " />

            <EditText
                android:id="@+id/kommentarText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:text="..."
                android:textSize="10dp"
                android:maxLength="30"/>
        </LinearLayout>
        <!--8.Zeile Reset Button (DONE)-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="buttonSetzeVerspaetungenZurueck"
                android:text="@string/reset_lateness" />
        </LinearLayout>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>